[tool.poetry]
name = "aiobrawlstats"
version = "0.1.0"
description = "Easy Async library for working with BrawlStars API"
authors = ["vladislavkovalskyi <v.darknesssb@gmail.com>"]
maintainers = ["thebakercat"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vladislavkovalskyi/aiobrawlstats"
repository = "https://github.com/vladislavkovalskyi/aiobrawlstats"
keywords = [
    "async",
    "asyncio",
    "brawl",
    "brawl-stars",
    "brawl-api",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vladislavkovalskyi/aiobrawlstats/issues"

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.11b1"
aiohttp = "^3.8.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
# lint
flake8 = "^4.0.1"
mypy = "^0.910"

# tests
pytest = "^6.2"
pytest-cov = "^2.8"
pytest-asyncio = "^0.15.0"
pytest-mock = "^3.3.1"

# docs
mkdocs = "^1.1.2"
mkdocs-material = "^7.0.0"

[tool.black]
line-length = 99
target-version = ['py38', 'py39']
force-exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
